--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -9,6 +9,7 @@
   <script>require('initialize');</script>
 </head>
 <body>
+  test
   <div class="brunch">
     <img src="/brunch-napkin.svg" alt="Brunch">
     <h4>Bon Appétit.</h4>
