--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <meta name="yandex-verification" content="24c2e56815f68494" />
   <title>Brunch</title>
   <link rel="stylesheet" href="/app.css">
   <script src="/vendor.js"></script>
@@ -9,7 +10,6 @@
   <script>require('initialize');</script>
 </head>
 <body>
-  test
   <div class="brunch">
     <img src="/brunch-napkin.svg" alt="Brunch">
     <h4>Bon Appétit.</h4>
